# autoblog_ai

./: .gitignore  main.py  pyproject.toml
agents/: base.py  blog_writer.py  file_publisher.py  grammar_checker.py  outline_builder.py  query_generator.py  researcher.py  source_linker.py  summariser.py  topic_extractor.py  website_crawler.py
media/: 20250607-benefits-of-cold-showers.md  20250607-why-is-epam-systems-the-best-company-in-uzbekistan.md  20250607-why-is-uzbekistan-empowering-with-it-industry.md  20250608-ai detection.md  20250608-ai-jokes.md  20250608-good-effects-of-cold-shower.md  20250608-why-is-uzbekistan-empowering-in-it-industry.md
utils/: crawl.py  serper.py  youtube.py
