[project]
name = "autoblog-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Firdavs Muzaffarov"}
]
readme = "README.md"
requires-python = ">=3.12"
python = ">=3.12,<4.0"
dependencies = [
    "openai (>=1.9,<2.0)",
    "langchain-openai (>=0.3.21,<0.4.0)"
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-api-python-client (>=2.171.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
